@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.3602 2003/10/01 11:31:33 abs Exp $
+$NetBSD: CHANGES,v 1.3603 2003/10/01 11:56:53 abs Exp $
 
 Changes to the packages collection and infrastructure in 2003:
 
@@ -4037,4 +4037,5 @@ Changes to the packages collection and infrastructure in 2003:
 	Added rinetd 0.62 [grant 2003-10-01]
 	Added exif 0.6 [itojun 2003-10-01]
 	Updated pkgchk to 1.43 [abs 2003-10-01]
+	Updated pkglint to 3.63 [abs 2003-10-01]
 
